; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_ohci1394.c_ohci_iso_recv_bufferfill_release.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_ohci1394.c_ohci_iso_recv_bufferfill_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ohci_iso_recv = type { i64, i64, i32, i32 }
%struct.hpsb_iso_packet_info = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ohci_iso_recv*, %struct.hpsb_iso_packet_info*)* @ohci_iso_recv_bufferfill_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ohci_iso_recv_bufferfill_release(%struct.ohci_iso_recv* %0, %struct.hpsb_iso_packet_info* %1) #0 {
  %3 = alloca %struct.ohci_iso_recv*, align 8
  %4 = alloca %struct.hpsb_iso_packet_info*, align 8
  store %struct.ohci_iso_recv* %0, %struct.ohci_iso_recv** %3, align 8
  store %struct.hpsb_iso_packet_info* %1, %struct.hpsb_iso_packet_info** %4, align 8
  %5 = load %struct.hpsb_iso_packet_info*, %struct.hpsb_iso_packet_info** %4, align 8
  %6 = getelementptr inbounds %struct.hpsb_iso_packet_info, %struct.hpsb_iso_packet_info* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.ohci_iso_recv*, %struct.ohci_iso_recv** %3, align 8
  %9 = getelementptr inbounds %struct.ohci_iso_recv, %struct.ohci_iso_recv* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = add nsw i64 %10, %7
  store i64 %11, i64* %9, align 8
  br label %12

12:                                               ; preds = %20, %2
  %13 = load %struct.ohci_iso_recv*, %struct.ohci_iso_recv** %3, align 8
  %14 = getelementptr inbounds %struct.ohci_iso_recv, %struct.ohci_iso_recv* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load %struct.ohci_iso_recv*, %struct.ohci_iso_recv** %3, align 8
  %17 = getelementptr inbounds %struct.ohci_iso_recv, %struct.ohci_iso_recv* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = icmp sgt i64 %15, %18
  br i1 %19, label %20, label %43

20:                                               ; preds = %12
  %21 = load %struct.ohci_iso_recv*, %struct.ohci_iso_recv** %3, align 8
  %22 = load %struct.ohci_iso_recv*, %struct.ohci_iso_recv** %3, align 8
  %23 = getelementptr inbounds %struct.ohci_iso_recv, %struct.ohci_iso_recv* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 8
  %25 = call i32 @ohci_iso_recv_release_block(%struct.ohci_iso_recv* %21, i32 %24)
  %26 = load %struct.ohci_iso_recv*, %struct.ohci_iso_recv** %3, align 8
  %27 = getelementptr inbounds %struct.ohci_iso_recv, %struct.ohci_iso_recv* %26, i32 0, i32 2
  %28 = load i32, i32* %27, align 8
  %29 = add nsw i32 %28, 1
  %30 = load %struct.ohci_iso_recv*, %struct.ohci_iso_recv** %3, align 8
  %31 = getelementptr inbounds %struct.ohci_iso_recv, %struct.ohci_iso_recv* %30, i32 0, i32 3
  %32 = load i32, i32* %31, align 4
  %33 = srem i32 %29, %32
  %34 = load %struct.ohci_iso_recv*, %struct.ohci_iso_recv** %3, align 8
  %35 = getelementptr inbounds %struct.ohci_iso_recv, %struct.ohci_iso_recv* %34, i32 0, i32 2
  store i32 %33, i32* %35, align 8
  %36 = load %struct.ohci_iso_recv*, %struct.ohci_iso_recv** %3, align 8
  %37 = getelementptr inbounds %struct.ohci_iso_recv, %struct.ohci_iso_recv* %36, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = load %struct.ohci_iso_recv*, %struct.ohci_iso_recv** %3, align 8
  %40 = getelementptr inbounds %struct.ohci_iso_recv, %struct.ohci_iso_recv* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = sub nsw i64 %41, %38
  store i64 %42, i64* %40, align 8
  br label %12

43:                                               ; preds = %12
  ret void
}

declare dso_local i32 @ohci_iso_recv_release_block(%struct.ohci_iso_recv*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
